feat: add backend validation for long group names when assigning to a zaak (#308)
Add backend validation for long group names when assigning a group to a
zaak.

Solves PZ-926